# HWW04

front-init/front-init/: Dockerfile  HWW03_syte_logic.py  pyproject.toml  requirements.txt
front-init/front-init/storage/: data.json
